--- a/bboss-balance/bboss-balance-user.yml
+++ b/bboss-balance/bboss-balance-user.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8892
+  port: ${PORT:${SERVER_PORT:0}} #这个的意思是随机指定个没使用的端口
 logging:
   config: classpath:log/logback.xml    
 eureka:
